--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zarinpal/zarinpal",
+    "name": "vahidalvandi/zarinpal",
     "description": "transaction request system for zarinpal",
     "license": "GPL-2.0-only",
     "authors": [
